@@ -1,5 +1,4 @@
 export(
-  "cgdefault",
   "Rcgmin",
   "Rcgminu",
   "Rcgminb"
