@@ -1,102 +1,0 @@
-require(Rcgmin)
-fr <- function(x) {
-x1 <- x[1]
-x2 <- x[2]
-100 * (x2 - x1 * x1)^2 + (1 - x1)^2
-}
-grr <- function(x) { ## Gradient of 'fr'
-x1 <- x[1]
-x2 <- x[2]
-c(-400 * x1 * (x2 - x1 * x1) - 2 * (1 - x1),
-200 *      (x2 - x1 * x1))
-}
-grn<-function(x){
-gg<-grad(fr, x)
-}
-ansrosenbrock0 <- Rcgmin(fn=fr,gr=grn, par=c(1,2))
-sessionInfo()
-?grchk
-source('~/RcgminEx.R', echo=TRUE)
-source('~/RcgminEx.R', echo=TRUE)
-require(Rcgmin)
-fr <- function(x) {
-x1 <- x[1]
-x2 <- x[2]
-100 * (x2 - x1 * x1)^2 + (1 - x1)^2
-}
-grr <- function(x) { ## Gradient of 'fr'
-x1 <- x[1]
-x2 <- x[2]
-c(-400 * x1 * (x2 - x1 * x1) - 2 * (1 - x1),
-200 *      (x2 - x1 * x1))
-}
-grn<-function(x){
-gg<-grad(fr, x)
-}
-ansrosenbrock0 <- Rcgmin(fn=fr,gr=grn, par=c(1,2))
-require(numDeriv)
-fr <- function(x) {
-x1 <- x[1]
-x2 <- x[2]
-100 * (x2 - x1 * x1)^2 + (1 - x1)^2
-}
-grr <- function(x) { ## Gradient of 'fr'
-x1 <- x[1]
-x2 <- x[2]
-c(-400 * x1 * (x2 - x1 * x1) - 2 * (1 - x1),
-200 *      (x2 - x1 * x1))
-}
-grn<-function(x){
-gg<-grad(fr, x)
-}
-ansrosenbrock0 <- Rcgmin(fn=fr,gr=grn, par=c(1,2))
-print(ansrosenbrock0) # use print to allow copy to separate file that
-bt.f<-function(x){
-sum(x*x)
-}
-bt.g<-function(x){
-gg<-2.0*x
-}
-n<-10
-xx<-rep(0,n)
-lower<-rep(0,n)
-upper<-lower # to get arrays set
-bdmsk<-rep(1,n)
-bdmsk[(trunc(n/2)+1)]<-0
-for (i in 1:n) {
-lower[i]<-1.0*(i-1)*(n-1)/n
-upper[i]<-1.0*i*(n+1)/n
-}
-xx<-0.5*(lower+upper)
-ansbt<-Rcgmin(xx, bt.f, bt.g, lower, upper, bdmsk, control=list(trace=1))
-print(ansbt)
-genrose.f<- function(x, gs=NULL){ # objective function
-## One generalization of the Rosenbrock banana valley function (n parameters)
-n <- length(x)
-if(is.null(gs)) { gs=100.0 }
-fval<-1.0 + sum (gs*(x[1:(n-1)]^2 - x[2:n])^2 + (x[2:n] - 1)^2)
-return(fval)
-}
-genrose.g <- function(x, gs=NULL){
-# vectorized gradient for genrose.f
-# Ravi Varadhan 2009-04-03
-n <- length(x)
-if(is.null(gs)) { gs=100.0 }
-gg <- as.vector(rep(0, n))
-tn <- 2:n
-tn1 <- tn - 1
-z1 <- x[tn] - x[tn1]^2
-z2 <- 1 - x[tn]
-gg[tn] <- 2 * (gs * z1 - z2)
-gg[tn1] <- gg[tn1] - 4 * gs * x[tn1] * z1
-gg
-}
-xx<-rep(pi,10)
-lower<-NULL
-upper<-NULL
-bdmsk<-NULL
-genrosea<-Rcgmin(xx,genrose.f, genrose.g, gs=10)
-genrosenn<-Rcgmin(xx,genrose.f, gs=10) # use local numerical gradient
-cat("genrosea uses analytic gradient\n")
-sessionInfo()
-require(optextras)
