@@ -82,7 +82,8 @@
    \item{\code{dowarn}}{= TRUE if we want warnings generated by optimx. Default is 
      TRUE.}
    \item{\code{tol}}{Tolerance used in testing the size of the square of the gradient.
-     Default is 0 on input, which uses a value of tolgr = npar*npar*.Machine$double.eps
+     Default is 0 on input, which uses a value of tolgr = n*n*.Machine$double.eps,
+     where n is the number of parameters,
      in testing if crossprod(g) <= tolgr * (abs(fmin) + offset). If the user supplies
      a value for \code{tol} that is non-zero, then that value is used for tolgr.
 
@@ -269,19 +270,6 @@ negmaxfn<-function(x) {
 	f<-(-1)*maxfn(x)
 	return(f)
 }
-
-
-
-cat("test that maximize=TRUE works correctly\n")
-
-n<-6
-xx<-rep(1,n)
-ansmax<-Rcgmin(xx,maxfn, control=list(maximize=TRUE,trace=1))
-print(ansmax)
-
-cat("using the negmax function should give same parameters\n")
-ansnegmax<-Rcgmin(xx,negmaxfn, control=list(trace=1))
-print(ansnegmax)
 
 
 #####################  From Rvmmin.Rd
